--- a/video.css
+++ b/video.css
@@ -104,6 +104,7 @@ background: var(--blacktheme-dark, #181818);
 .test{
     display: flex;
     gap: 20px;
+    flex-direction: row;
 }
 .videoCarry{
     padding: 20px;
@@ -312,4 +313,7 @@ line-height: 20px; /* 166.667% */
     font-weight: 400;
     line-height: 18px; /* 150% */
     text-transform: uppercase;
+}
+.commentCards >img{
+    border-radius: 50%;
 }
