--- a/video.css
+++ b/video.css
@@ -60,7 +60,7 @@ background: var(--blacktheme-dark, #181818);
 
 .nav3{
     display: flex;
-    gap: 0px;
+    gap: 10px;
 
 }
 
@@ -73,9 +73,10 @@ background: var(--blacktheme-dark, #181818);
     background: #181818;
 }
 .rightSection{
-    height: 1000px;
-    width: 40%;
-    background-color: red;
+    display: flex;
+    height: 100%;
+    width: 400px;
+    background-color: rgb(50, 45, 45);
 }
 
 #videoName{
@@ -99,16 +100,21 @@ background: var(--blacktheme-dark, #181818);
     display: flex;
     flex-direction: column;
     padding: 20px;
+    gap: 20px;
     background: #181818;
 }
 .test{
     display: flex;
-    gap: 20px;
+   
     flex-direction: row;
 }
 .videoCarry{
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+    gap: 10px;
     padding: 20px;
-    background-color: #424242;
+  background: #181818;;
 }
 .h1c{
     display: flex;
