--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ background: var(--blacktheme-dark, #181818);
 
 .nav3{
     display: flex;
-    gap: 0px;
+    gap: 10px;
 
 }
 
@@ -144,6 +144,13 @@ flex-shrink: 0;background: var(--blacktheme-light, #212121);
    
     padding: 10px;
 }
+.myCard:hover{
+    cursor:pointer;
+   transform: scale(1.1);
+   transition-duration:1s;
+   transition-delay: 200ms;
+   border: 1px solid gray;
+}
 
 .mycardimg1{
     display: flex;
@@ -197,13 +204,99 @@ flex-shrink: 0;background: var(--blacktheme-light, #212121);
 
 .dummyHero{
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    gap: 37px;
+    gap: 0px;    
 }
 .left-hero{
     width: 240px !important;
+    padding: 20px;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+.left-hero div{
+    display: flex;
+    width: 100%;
+    gap:20px;
+    flex-direction: column;
+    padding: 5px;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.left-hero div div{
+    display: flex;
+    width: 100%;
+    
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+
+}
+.left-hero div div > h1{
+    color: var(--White-Color, #FFF);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+}
+.lh3 div:hover{
+    background-color: red;
+    cursor: pointer;
+    border-radius: 10px;
+}
+.lh4 div:hover{
+    background-color: red;
+    cursor: pointer;
+    border-radius: 10px;
+}
+.lh2 div:hover{
+    background-color: red;
+    cursor: pointer;
+    border-radius: 10px;
+}
+.lh1 div:hover{
+    background-color: red;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.lh1 div h1{
+    color: var(--White-Color, #FFF);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 .hero{
     height: 100%;
+}
+.lh1h2{
+    color: var(--Gray-Color, #AAA);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.hero{
+    width: 100%;
+    height: 100%;
+}
+.dummyHero{
+    width: 100%;height: 100%;
+}
+.rightBar{
+    width: 100%;height: 100%;
+}
+.content{
+    width: 100%;height: 100%;
+}
+.card:hover{
+    scale: (1.1)!important;
+    cursor: pointer;
 }
